--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
 
   img{
-    width: 15rem;
+    width: 25rem;
   }
   .tmbl {
     
@@ -36,6 +36,8 @@
     transition: 1s;
     font-weight: 600;
     font-size: large;
+    width: 15rem;
+    height: 7rem;
     
   }
     button:hover{
@@ -95,3 +97,4 @@
    dnuos.play();
   })
 </script>
+
