--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     border: 2px crimson;
     transition: 1s;
     font-weight: 600;
-    font-size: large;
+    font-size: xx-large;
     width: 15rem;
     height: 7rem;
     
